--- a/app/views/generic/capitalselect.html
+++ b/app/views/generic/capitalselect.html
@@ -14,6 +14,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/capital-assets">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -62,8 +64,7 @@
             </div>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/capital-assets">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
