--- a/app/views/generic/dwpconf.html
+++ b/app/views/generic/dwpconf.html
@@ -14,6 +14,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/dwpdetails">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -35,11 +37,11 @@
               Name
             </dt>
             <dd class="cya-answer">
-              John Smith
+              John Doe
             </dd>
             <dd class="cya-change">
               <a class="govuk-link" href="#">
-                Change<span class="visually-hidden"> name</span>
+                <span class="visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -73,8 +75,7 @@
           </div>
         </dl>
         </br>
-        <a href="/generic/obbank" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/obconsent">Back</a>
+        <a href="/generic/obbank" class="govuk-c-button">Continue</a>
 
       </div>
     </div>
