--- a/app/views/generic/dwpdetails.html
+++ b/app/views/generic/dwpdetails.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 3 of 23</b></p>
+    <a class="govuk-c-back-link" href="/generic/obconsent">Back</a>
 
     <div class="govuk-o-grid">
 
@@ -62,8 +62,7 @@
             </div>
           </fieldset>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/obconsent">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
