--- a/app/views/generic/identify-outgoings.html
+++ b/app/views/generic/identify-outgoings.html
@@ -411,6 +411,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/identify-income-salary-other">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -419,7 +421,7 @@
         <h2 class="govuk-heading-xl">
               Tell us about your outgoings
         </h2>
-         <p class="govuk-body">
+        <p class="govuk-body">
           Add relevant transactions from the last month of your bank statement.
         </p>
         <p class="govuk-body">
@@ -484,9 +486,7 @@
             </ul>
           </li>
         </ol>
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/identify-income-salary-other">Back</a>
-
+        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
       </div>
 
     </div>
