--- a/app/views/generic/select-housing.html
+++ b/app/views/generic/select-housing.html
@@ -101,6 +101,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/identify-outgoings">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -110,7 +112,7 @@
               Select mortgage, rent and council tax payments
         </h2>
 
-         <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -183,8 +185,7 @@
 
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings-with-housing" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/identify-outgoings">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings-with-housing" role="button">Continue</a>
 
       </div>
 
