--- a/app/views/generic/benefits-kind.html
+++ b/app/views/generic/benefits-kind.html
@@ -14,6 +14,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/other-income">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -46,9 +48,7 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
-
+          <input class="govuk-c-button" type="submit" value="Continue">
         </form>
       </div>
     </div>
