--- a/app/views/generic/capitalshares.html
+++ b/app/views/generic/capitalshares.html
@@ -14,6 +14,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/capitalselect">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -33,8 +35,7 @@
           </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="cap-shares" name="cap-shares" placeholder="0.00" type="number">
           </div>
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/capitalselect">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
       </div>
