--- a/app/views/generic/identify-income-salary-other.html
+++ b/app/views/generic/identify-income-salary-other.html
@@ -411,6 +411,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/select-other">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -420,7 +422,7 @@
               Tell us about your income
         </h2>
 
-         <p class="govuk-body">
+        <p class="govuk-body">
           Add relevant transactions from the last month of your bank statement.
         </p>
         <p class="govuk-body">
@@ -451,57 +453,59 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Salary
+              <span class="task-list-section-number">1. </span>Salary
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">
-                        BACS Transfer Tyreworld - £1800.00
+                  BACS Transfer Tyreworld - £1800.00
                 </a>
-                <strong class="task-completed" id="salary-1-completed">Verified</strong>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                  Add item
                 </a>
               </li>
             </ul>
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Pensions
+              <span class="task-list-section-number">2. </span>Pensions
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                  Add item
                 </a>
               </li>
-
             </ul>
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">3. </span> Other
-                  </h2>
+              <span class="task-list-section-number">3. </span> Other
+            </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-completed">
-                        Child maintenance - £250.00
-                      </a>
-                <strong class="task-completed" id="other-completed">Verified</strong>
+                  Child maintenance - £250.00
+                </a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
-                      </a>
+                  Add item
+                </a>
               </li>
             </ul>
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/select-other">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic/identify-outgoings" role="button">Continue</a>
 
       </div>
 
