--- a/app/views/generic/obbank.html
+++ b/app/views/generic/obbank.html
@@ -173,6 +173,8 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
+      <a class="govuk-c-back-link" href="/generic/dwpconf">Back</a>
+
       <p class="govuk-body"></p>
 
       <div class="govuk-o-grid">
@@ -190,17 +192,23 @@
                   <p class="govuk-heading">You will need to share all of your bank accounts, including any in joint names or with no money. Always keep your password details private.</p>
                 </legend>
 
-              <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
-              <h3>Give one-time access to your accounts</h3>
-              <br>
-              <ul class="govuk-list govuk-list--bullet">
-              <li>Sign in and give temporary access to your accounts</li>
-              <li>We download 3 months' transactions</li>
-              <li>The bank connection automatically ends after 1 hour</li>
-              <li>Your online banking details are not saved</li>
-              </ul>
-              </div>
+                <div class="govuk-c-warning-text">
+                  <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
+                  <strong class="govuk-c-warning-text__text">
+                    Give one-time access to your accounts
+                  </strong>
+                </div>
 
+                <p class="govuk-body">
+                  <ul class="govuk-list govuk-list--bullet">
+                    <li>Sign in and give temporary access to your accounts</li>
+                    <li>We download 3 months' transactions</li>
+                    <li>The bank connection automatically ends after 1 hour</li>
+                    <li>Your online banking details are not saved</li>
+                  </ul>
+                </p>
+
+                </br>
                 <div class="govuk-c-radios__item">
                   <input class="govuk-c-radios__input" id="bank-1" name="bank" type="radio" value="togetherbank" required>
                   <label class="govuk-c-label govuk-c-radios__label" for="bank-1">
@@ -222,8 +230,7 @@
               </fieldset>
             </div>
 
-            <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link" href="/generic/dwpconf">Back</a>
+            <input class="govuk-c-button" id="myBtn" value="Continue" onclick="setTimeout(modalOpen, 1000)" style="width:auto;" readonly>
 
           </form>
         </div>
@@ -339,7 +346,7 @@
         <div align="center"><img src="../public/images/padlock.png" alt="padlock" height="42" width="42" style="vertical-align: middle"><b>Select account(s)</b></div>
 
         <p>
-           Select all accounts, including those in joint names.</p>
+          Select all accounts, including those in joint names.</p>
         <form action="">
           <div class="inline-field">
             <input type="checkbox" name="account1" value="Current"><label for="account1"><b>Togetherbank Current Account</b><br>Account Number: 123456789</label>
