--- a/app/views/generic/obconsent.html
+++ b/app/views/generic/obconsent.html
@@ -14,6 +14,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/start">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -31,17 +33,23 @@
 
               <p class="govuk-body">We only use the details to support your application. We do not use it for anything else. <a href="#">Find out how we use and store your personal data</a></p>
 
-              <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
-              <h3>Keeping your details secure</h3>
-              <br>
-              <ul class="govuk-list govuk-list--bullet">
-              <li>Sign in safely to your online banking</li>
-              <li>Authorise temporary access to your accounts</li>
-              <li>We take 3 months of transactions to check your financial status</li>
-              <li>Your data is stored securely for 5 years and then destroyed</li>
-              </ul>
+              <div class="govuk-c-warning-text">
+                <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
+                <strong class="govuk-c-warning-text__text">
+                  Keeping your details secure
+                </strong>
               </div>
 
+              <p class="govuk-body">
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>Sign in safely to your online banking</li>
+                  <li>Authorise temporary access to your accounts</li>
+                  <li>We take 3 months of transactions to check your financial status</li>
+                  <li>Your data is stored securely for 5 years and then destroyed</li>
+                </ul>
+              </p>
+
+              </br>
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
@@ -60,8 +68,7 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic/start">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
