--- a/app/views/generic/select-other.html
+++ b/app/views/generic/select-other.html
@@ -101,6 +101,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/identify-income-with-salary">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -176,8 +178,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic/identify-income-salary-other" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/identify-income-with-salary">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic/identify-income-salary-other" role="button">Continue</a>
 
       </div>
 
