--- a/app/views/generic/select-salary.html
+++ b/app/views/generic/select-salary.html
@@ -47,6 +47,8 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
+    <a class="govuk-c-back-link" href="/generic/identify-income">Back</a>
+
     <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
@@ -113,8 +115,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic/identify-income-with-salary" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic/identify-income">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic/identify-income-with-salary" role="button">Continue</a>
 
       </div>
 
