Multiple revisions to generic-truelayer - copy changes - remove step count and move back button to top of screen - reorder loop screen and non-bank

--- a/app/views/generic-truelayer/benefits-kind.html
+++ b/app/views/generic-truelayer/benefits-kind.html
@@ -14,7 +14,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 20 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/other-income">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -24,7 +26,7 @@
         </h1>
 
         <p class="govuk-body">
-          Benefits in kind include a company car, luncheon vouchers or health insurance.
+          Benefits in kind include a company car, travel card or health insurance.
         </p>
 
         <form class="form" action="/generic-truelayer/capital-assets" method="post">
@@ -46,9 +48,7 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic-truelayer/obmultiple">Back</a>
-
+          <input class="govuk-c-button" type="submit" value="Continue">
         </form>
       </div>
     </div>
