--- a/app/views/generic-truelayer/capitalshares.html
+++ b/app/views/generic-truelayer/capitalshares.html
@@ -14,7 +14,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 23 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/capitalselect">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -33,8 +35,7 @@
           </label> <br>£
             <input class="govuk-c-input govuk-!-width-two-thirds" id="cap-shares" name="cap-shares" placeholder="0.00" type="number">
           </div>
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic-truelayer/capitalselect">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
       </div>
