--- a/app/views/generic-truelayer/dwpconf.html
+++ b/app/views/generic-truelayer/dwpconf.html
@@ -14,7 +14,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 4 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/dwpdetails">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -23,7 +25,7 @@
           Are your details correct?
         </h1>
 
-        <p class="govuk-body">Check the information you have given us or make changes if it is not correct.</p>
+        <p class="govuk-body">Check the information you have given is correct or make changes.</p>
 
         <h2 class="govuk-heading-m">
           Your details
@@ -35,11 +37,11 @@
               Name
             </dt>
             <dd class="cya-answer">
-              John Smith
+              John Doe
             </dd>
             <dd class="cya-change">
               <a class="govuk-link" href="#">
-                Change<span class="visually-hidden"> name</span>
+                <span class="visually-hidden"></span>
               </a>
             </dd>
           </div>
@@ -73,8 +75,7 @@
           </div>
         </dl>
         </br>
-        <a href="/generic-truelayer/obbank" class="govuk-c-button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/obconsent">Back</a>
+        <a href="/generic-truelayer/obbank" class="govuk-c-button">Continue</a>
 
       </div>
     </div>
