--- a/app/views/generic-truelayer/identify-income.html
+++ b/app/views/generic-truelayer/identify-income.html
@@ -186,7 +186,6 @@
   sup,
   tt,
   var,
-  b,
   u,
   i,
   center,
@@ -411,7 +410,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><strong>Step 7 of 24</strong></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/bank-success">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -420,11 +421,13 @@
           Tell us about your income
         </h2>
 
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+        <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
+        </p>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly income.
         </p>
 
-        <br>
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
 
@@ -485,8 +488,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/bank-success">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
 
       </div>
 
