--- a/app/views/generic-truelayer/means-result.html
+++ b/app/views/generic-truelayer/means-result.html
@@ -16,17 +16,14 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 24 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/capitalshares">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
-        <h1 class="govuk-heading-xl">
-          Your provisional result
-        </h1>
-
-
-        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6">
+        <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
           <h2 class="govuk-c-panel__title">
             Provisional result:
           </h2>
@@ -58,31 +55,26 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Bank accounts</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£470.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Other savings</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1400.00</td>
                   <td class="govuk-c-table__cell" style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-                
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Shares</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1000.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Outstanding</a></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,870.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total capital limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£8,000.00</td>
@@ -106,15 +98,13 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Total gross wage</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£2,245.00</td>
-                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
+                  <td class="govuk-c-table__cell"style="text-align:right"><a href="">Pending</a></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Maintenance</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£250.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Gross income</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£2,495.00</td>
@@ -140,31 +130,26 @@
                 </tr>
               </thead>
               <tbody class="govuk-c-table__body">
-
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Child care</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£600.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell">Housing costs</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">£1200.00</td>
                   <td class="govuk-c-table__cell"style="text-align:right"><a href="">Verified</a></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total deductions</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£1,800.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Total disposable income</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£695.00</td>
                   <td class="govuk-c-table__cell" style="border-width:thick;"></td>
                 </tr>
-
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" style="border-width:thick;">Disposable income limit</th>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric" style="border-width:thick;">£733.00</td>
@@ -173,9 +158,6 @@
             </table>
           </div>
           </br>
-
-          <a class="govuk-c-back-link" href="/generic-truelayer/capitalshares">Back</a>
-
         </form>
       </div>
     </div>
