--- a/app/views/generic-truelayer/bank-success.html
+++ b/app/views/generic-truelayer/bank-success.html
@@ -19,28 +19,39 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 6 of 24</b></p>
+      <a class="govuk-c-back-link" href="/generic-truelayer/obbank">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
 
           <h2 class="govuk-heading-xl">
-          You have succesfully shared your account information
-        </h2>
+            You have succesfully shared your account information
+          </h2>
 
-          <p class="govuk-body">You have been logged out of your online banking.</p>
+          <p class="govuk-body">We have downloaded 3 months of your transaction history. You can use this to tell us more about your financial situation.</p>
 
-          <p class="govuk-body">We have downloaded your transaction history for the last 3 months. You can use this to tell us more about your incoming and outgoing payments.</p>
+          <div class="govuk-c-warning-text">
+            <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
+            <strong class="govuk-c-warning-text__text">
+              How we use your details
+            </strong>
+          </div>
 
+          <p class="govuk-body">
+            <ul class="govuk-list govuk-list--bullet">
+              <li>We check your transaction history for incomings and outgoings</li>
+              <li>We only use details for this application, nothing else</li>
+              <li>Your data is stored securely for 5 years and then destroyed</li>
+            </ul>
+          </p>
+
+          </br>
           <h2 class="govuk-heading-m">
-          Your account(s)
-        </h2>
+            Your account(s)
+          </h2>
 
           <div>
-
-
             <table class="govuk-c-table--two-thirds" style="border-spacing:0">
-
               <thead class="govuk-c-table__head">
                 <tr class="govuk-c-table__row">
                   <th class="govuk-c-table__header" scope="col" style="border-width:thick;">Type</th>
@@ -124,8 +135,7 @@
             </table>
             <br>
 -->
-            <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link" href="/generic-truelayer/obbank">Back</a>
+            <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-income" role="button">Continue</a>
 
           </div>
 
