--- a/app/views/generic-truelayer/capital-assets.html
+++ b/app/views/generic-truelayer/capital-assets.html
@@ -14,7 +14,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 21 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/benefits-kind">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -42,8 +44,7 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic-truelayer/benefits-kind">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
