--- a/app/views/generic-truelayer/identify-income-salary-other.html
+++ b/app/views/generic-truelayer/identify-income-salary-other.html
@@ -187,7 +187,6 @@
   sup,
   tt,
   var,
-  b,
   u,
   i,
   center,
@@ -412,7 +411,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 11 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/select-other">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -421,11 +422,13 @@
               Tell us about your income
         </h2>
 
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+        <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
+        </p>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly income.
         </p>
 
-        <br>
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
 
@@ -450,57 +453,59 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Salary
+              <span class="task-list-section-number">1. </span>Salary
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="salary-1-completed">
-                        BACS Transfer Tyreworld - £1800.00
+                  BACS Transfer Tyreworld - £1800.00
                 </a>
-                <strong class="task-completed" id="salary-1-completed">Verified</strong>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                  Add item
                 </a>
               </li>
             </ul>
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Pensions
+              <span class="task-list-section-number">2. </span>Pensions
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                  Add item
                 </a>
               </li>
-
             </ul>
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">3. </span> Other
-                  </h2>
+              <span class="task-list-section-number">3. </span> Other
+            </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="other-completed">
-                        Child maintenance - £250.00
-                      </a>
-                <strong class="task-completed" id="other-completed">Verified</strong>
+                  Child maintenance - £250.00
+                </a>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
-                      </a>
+                  Add item
+                </a>
               </li>
             </ul>
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/other-income" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/select-other">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-outgoings" role="button">Continue</a>
 
       </div>
 
