--- a/app/views/generic-truelayer/identify-income-with-salary.html
+++ b/app/views/generic-truelayer/identify-income-with-salary.html
@@ -187,7 +187,6 @@
   sup,
   tt,
   var,
-  b,
   u,
   i,
   center,
@@ -414,7 +413,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 9 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/select-salary">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -423,11 +424,12 @@
               Tell us about your income
         </h2>
 
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+        <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
         </p>
-
-        <br>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly income.
+        </p>
 
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
@@ -460,7 +462,9 @@
                 <a class="task-name" aria-describedby="salary-1-completed">
                         BACS Transfer Tyreworld - £1800.00
                 </a>
-                <strong class="task-completed" id="salary-1-completed">Verified</strong>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
@@ -495,8 +499,7 @@
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/select-salary">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
 
       </div>
 
