--- a/app/views/generic-truelayer/identify-outgoings-with-housing.html
+++ b/app/views/generic-truelayer/identify-outgoings-with-housing.html
@@ -187,7 +187,6 @@
   sup,
   tt,
   var,
-  b,
   u,
   i,
   center,
@@ -413,7 +412,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 15 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/select-housing">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -421,11 +422,12 @@
         <h2 class="govuk-heading-xl">
               Tell us about your outgoings
         </h2>
-        <p style="govuk-body">
-          Add an item and tell us about relevant transactions from your bank statement.
+        <p class="govuk-body">
+          Add relevant transactions from the last month of your bank statement.
         </p>
-
-        <br>
+        <p class="govuk-body">
+          We use your 3 month transaction history to work out your average monthly outgoings.
+        </p>
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -448,30 +450,32 @@
         <ol class="task-list">
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">1. </span>Mortage, rent and council tax
+                <span class="task-list-section-number">1. </span>Mortgage, rent and council tax
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" aria-describedby="housing-1-completed">
-                        MyLandlord Letting Agents - £1200.00
+                    MyLandlord Letting Agents - £1200.00
                 </a>
-                <strong class="task-completed" id="housing-1-completed">Verified</strong>
+                <a style="color:red">
+                  <href='#'><u>Remove</u>
+                </a>
               </li>
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                  Add item
                 </a>
               </li>
             </ul>
           </li>
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">2. </span>Childcare
+              <span class="task-list-section-number">2. </span>Childcare
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="/generic-truelayer/select-childcare">
-                        Add item
+                  Add item
                 </a>
               </li>
             </ul>
@@ -479,20 +483,19 @@
 
           <li>
             <h2 class="task-list-section">
-                    <span class="task-list-section-number">3. </span>Other
+              <span class="task-list-section-number">3. </span>Other
             </h2>
             <ul class="task-list-items">
               <li class="task-list-item">
                 <a class="task-name" href="#">
-                        Add item
+                  Add item
                 </a>
               </li>
             </ul>
           </li>
         </ol>
 
-        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/select-housing">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="" role="button">Continue</a>
 
       </div>
 
