--- a/app/views/generic-truelayer/obbank.html
+++ b/app/views/generic-truelayer/obbank.html
@@ -39,7 +39,7 @@
 
     <main role="main" class="govuk-o-main-wrapper">
 
-      <p class="govuk-body"><b>Step 5 of 24</b></p>
+      <a class="govuk-c-back-link " href="/generic-truelayer/dwpconf ">Back</a>
 
       <div class="govuk-o-grid">
         <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -54,19 +54,26 @@
               You will now be redirected to a secure service to sign in to your online banking.
             </p>
 
-               <p class="govuk-body">You will need to share all of your bank accounts, including any in joint names or with no money. Always keep your password details private.</p>
-              <div class="govuk-c-panel govuk-c-panel--confirmation govuk-!-mb-r6" style="background-color:#ffbf00">
-              <h3>How we connect to your online banking</h3>
-              <br>
+            <p class="govuk-body">You will need to share all of your bank accounts, including any in joint names or with no money. Always keep your password details private.</p>
+
+
+            <div class="govuk-c-warning-text">
+              <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
+              <strong class="govuk-c-warning-text__text">
+                How we connect to your online banking
+              </strong>
+            </div>
+
+            <p class="govuk-body">
               <ul class="govuk-list govuk-list--bullet">
-              <li>You sign in and give temporary access to your accounts</li>
-              <li>We download 3 months' transactions</li>
-              <li>The bank connection automatically ends after 1 hour</li>
-              <li>Your online banking details are not saved</li>
+                <li>You sign in and give temporary access to your accounts</li>
+                <li>We download 3 months' transactions</li>
+                <li>The bank connection automatically ends after 1 hour</li>
+                <li>Your online banking details are not saved</li>
               </ul>
-              </div>
-            <a role="button" class="govuk-c-button" href="#" id="truelayerRedirect">Continue</a> &nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;
-            <a class="govuk-c-back-link " href="/generic-truelayer/dwpconf ">Back</a>
+            </p>
+
+            <a role="button" class="govuk-c-button" href="#" id="truelayerRedirect">Continue</a>
 
           </form>
         </div>
