--- a/app/views/generic-truelayer/obconsent.html
+++ b/app/views/generic-truelayer/obconsent.html
@@ -14,7 +14,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 2 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/start">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -29,27 +31,44 @@
 
               <p class="govuk-body">We use the information to check how much you earn, how much you spend on things like childcare and whether you receive benefits.</p>
 
-              <p class="govuk-body">You decide what information you want to give. We only use the details to support your application. We do not use it for anything else.</p>
+              <p class="govuk-body">We only use the details to support your application. We do not use it for anything else. <a href="#">Find out how we use and store your personal data</a></p>
 
+              <div class="govuk-c-warning-text">
+                <span class="govuk-c-warning-text__icon govuk-o-circle" aria-hidden="true">!</span>
+                <strong class="govuk-c-warning-text__text">
+                  Keeping your details secure
+                </strong>
+              </div>
+
+              <p class="govuk-body">
+                <ul class="govuk-list govuk-list--bullet">
+                  <li>Sign in safely to your online banking</li>
+                  <li>Authorise temporary access to your accounts</li>
+                  <li>We take 3 months of transactions to check your financial status</li>
+                  <li>Your data is stored securely for 5 years and then destroyed</li>
+                </ul>
+              </p>
+
+              </br>
+              <div class="govuk-c-checkboxes__item">
+                <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
+                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
+                  <b>I am happy for you to check my tax and benefits status</b>
+                </label>
+              </div>
+              </br>
               <div class="govuk-c-checkboxes__item">
                 <input class="govuk-c-checkboxes__input" id="open-banking" name="open-banking" type="checkbox">
                 <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
                   <b>I am happy to share information from my online banking</b>
                 </label>
               </div>
-              </br>
 
-              <div class="govuk-c-checkboxes__item">
-                <input class="govuk-c-checkboxes__input" id="other-departments" name="other-departments" type="checkbox">
-                <label class="govuk-c-label govuk-c-checkboxes__label" for="other-departments">
-                  <b>I am happy for you to check my tax and benefit status</b>
-                </label>
-              </div>
+
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic-truelayer/start">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
