--- a/app/views/generic-truelayer/obmultiple.html
+++ b/app/views/generic-truelayer/obmultiple.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 19 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/identify-outgoings-housing-childcare">Back</a>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -42,8 +42,7 @@
             </fieldset>
           </div>
 
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic-truelayer/check-evidence">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
