--- a/app/views/generic-truelayer/select-childcare.html
+++ b/app/views/generic-truelayer/select-childcare.html
@@ -101,7 +101,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 16 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/identify-outgoings-with-housing">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -110,7 +112,7 @@
               Select your childcare payments
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest outgoing payment to help you.</p>
 
         <details>
           <summary><span class="summary">What outgoings should you tell us about?</span></summary>
@@ -124,7 +126,7 @@
             </p>
           </div>
         </details>
-
+        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
@@ -171,8 +173,7 @@
 
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-outgoings-housing-childcare" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/identify-outgoings-with-housing">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-outgoings-housing-childcare" role="button">Continue</a>
 
       </div>
 
