--- a/app/views/generic-truelayer/select-other.html
+++ b/app/views/generic-truelayer/select-other.html
@@ -101,7 +101,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 10 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/identify-income-with-salary">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -110,7 +112,7 @@
               Select any other types of income
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <details>
           <summary><span class="summary">What income should you tell us about?</span></summary>
@@ -130,7 +132,7 @@
             </p>
           </div>
         </details>
-
+        <br>
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
           <thead class="govuk-c-table__head">
@@ -176,8 +178,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-income-salary-other" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/identify-income-with-salary">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-income-salary-other" role="button">Continue</a>
 
       </div>
 
