--- a/app/views/generic-truelayer/select-salary.html
+++ b/app/views/generic-truelayer/select-salary.html
@@ -47,7 +47,9 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 8 of 24</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/identify-income">Back</a>
+
+    <p class="govuk-body"></p>
 
     <div class="govuk-o-grid">
       <div class="govuk-o-grid__item govuk-o-grid__item--two-thirds">
@@ -56,7 +58,7 @@
               Select your salary or wages
         </h2>
 
-        <p style="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
+        <p class="govuk-body">We have listed items from your statement by the highest incoming payment to help you.</p>
 
         <table class="govuk-c-table--two-thirds" style="border-spacing:0">
 
@@ -113,8 +115,7 @@
         </table>
         <br>
 
-        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-income-with-salary" role="button">Continue</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a class="govuk-c-back-link" href="/generic-truelayer/identify-income">Back</a>
+        <a class="govuk-c-button govuk-c-button" href="/generic-truelayer/identify-income-with-salary" role="button">Continue</a>
 
       </div>
 
