Fix remove buttons on check-evidence

--- a/app/views/generic-truelayer/check-evidence.html
+++ b/app/views/generic-truelayer/check-evidence.html
@@ -47,7 +47,7 @@
                   <td class="govuk-c-table__cell" scope="row">- BACS transfer Tyreworld - £1800.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
-                      <href='#'><u>Remove<u></a>
+                      <href='#'><u>Remove</u></a>
                   </td>
                 </tr>
                 <tr class="govuk-c-table__row">
@@ -69,10 +69,8 @@
                 <tr class="govuk-c-table__row">
                   <td class="govuk-c-table__cell" scope="row">- Child maintenance - £250.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
-                     <a style="color:red">
-                      <href='#'>
-                        <u>Remove<u>
-                      </a>
+                    <a style="color:red">
+                      <href='#'><u>Remove</u></a>
                   </td>
                 </tr>
               </tbody>
@@ -99,8 +97,7 @@
                   <td class="govuk-c-table__cell" scope="row">- YourLandlord Letting Agents - £1200.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
-                      <href='#'>
-                      <u>Remove<u>
+                      <href='#'><u>Remove</u>
                     </a>
                   </td>
                 </tr>
@@ -112,8 +109,7 @@
                   <td class="govuk-c-table__cell" scope="row">- Wiggly-tots Nursery - £600.00</td>
                   <td class="govuk-c-table__cell govuk-c-table__cell--numeric">
                     <a style="color:red">
-                      <href='#'>
-                      <u>Remove<u>
+                      <href='#'><u>Remove</u>
                     </a>
                   </td>
                 </tr>
