Fix back button notification

--- a/app/views/generic-truelayer/explain-transfer.html
+++ b/app/views/generic-truelayer/explain-transfer.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <p class="govuk-body"><b>Step 18 of 28</b></p>
+    <a class="govuk-c-back-link" href="/generic-truelayer/explain-other">Back</a>
 
     <div class="govuk-o-grid">
 
@@ -36,8 +36,7 @@
           </label>
           <input class="govuk-c-input govuk-!-width-two-thirds" id="transfer" name="transfer" type="text" required>
           <br></br>
-          <input class="govuk-c-button" type="submit" value="Continue">&nbsp;&nbsp;&nbsp;&nbsp;
-          <a class="govuk-c-back-link" href="/generic-truelayer/explain-other">Back</a>
+          <input class="govuk-c-button" type="submit" value="Continue">
 
         </form>
 
