--- a/app/views/generic/check-evidence.html
+++ b/app/views/generic/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="/generic/identify-outgoings-housing-childcare">Back</a>
+    <a class="govuk-c-back-link" href="/generic/obmultiple">Back</a>
 
     <p class="govuk-body"></p>
 
