Reorder other-income/benefits-kind/check-evidence screens

--- a/app/views/generic/benefits-kind.html
+++ b/app/views/generic/benefits-kind.html
@@ -29,7 +29,7 @@
           Benefits in kind include a company car, travel card or health insurance.
         </p>
 
-        <form class="form" action="/generic/capital-assets" method="post">
+        <form class="form" action="/generic/check-evidence" method="post">
 
           <div class="govuk-c-radios">
             <fieldset class="govuk-c-fieldset">
