--- a/app/views/generic/check-evidence.html
+++ b/app/views/generic/check-evidence.html
@@ -14,7 +14,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="/generic/obmultiple">Back</a>
+    <a class="govuk-c-back-link" href="/generic/benefits-kind">Back</a>
 
     <p class="govuk-body"></p>
 
@@ -27,7 +27,7 @@
 
         <p class="govuk-body">Check the items you have selected for your income and outgoings. We use this information and 3 months of transactions to see if you can get help.</p>
         <br>
-        <form class="form" action="/generic/other-income" method="post">
+        <form class="form" action="/generic/capital-assets" method="post">
 
           <div>
             <table class="govuk-c-table">
