--- a/app/views/generic/other-income.html
+++ b/app/views/generic/other-income.html
@@ -18,7 +18,7 @@
 
   <main role="main" class="govuk-o-main-wrapper">
 
-    <a class="govuk-c-back-link" href="/generic/check-evidence">Back</a>
+    <a class="govuk-c-back-link" href="/generic/obmultiple">Back</a>
 
     <p class="govuk-body"></p>
 
