Add in-progress case to post-contact

--- a/app/views/solicitor/post-contact.html
+++ b/app/views/solicitor/post-contact.html
@@ -29,7 +29,7 @@
           <a class="govuk-c-button govuk-c-button--start govuk-!-mt-r2 govuk-!-mb-r8" href="basic-details" role="button">New Application</a>
 
           <p class="govuk-body">You currently have:</p>
-          <a href='#' class="govuk-body">No outstanding actions (none overdue)</a></p>
+          <a href='#' class="govuk-body">One case in progress</a></p>
           <a href='#' class="govuk-body">View notifications (none outstanding)</a>
 
           <h3 class="govuk-heading-l">Support</h3>
